--- a/Programming.html
+++ b/Programming.html
@@ -49,10 +49,10 @@
                 Topics
               </a>
               <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="/Programming.html">Programming</a>
-                <a class="dropdown-item" href="CSETechFields.html">CSE Tech Fields</a>
-                <a class="dropdown-item" href="/TechTrends.html">Tech Trends in CS</a>
-                <a class="dropdown-item" href="TechFun.html">Tech Fun</a>
+                <a class="dropdown-item" href="NoobCoders/Programming.html">Programming</a>
+                <a class="dropdown-item" href="NoobCoders/CSETechFields.html">CSE Tech Fields</a>
+                <a class="dropdown-item" href="NoobCoders/TechTrends.html">Tech Trends in CS</a>
+                <a class="dropdown-item" href="NoobCoders/TechFun.html">Tech Fun</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="#">Write us</a>
               </div>
