--- a/TechTrends.html
+++ b/TechTrends.html
@@ -42,7 +42,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/about.html">About</a>
+            <a class="nav-link" href="NoobCoders/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -57,20 +57,20 @@
               Topics
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/Programming.html">Programming</a>
-              <a class="dropdown-item" href="CSETechFields.html"
+              <a class="dropdown-item" href="NoobCoders/Programming.html">Programming</a>
+              <a class="dropdown-item" href="NoobCoders/CSETechFields.html"
                 >CSE Tech Fields</a
               >
-              <a class="dropdown-item" href="/TechTrends.html"
+              <a class="dropdown-item" href="NoobCoders/TechTrends.html"
                 >Tech Trends in CS</a
               >
-              <a class="dropdown-item" href="TechFun.html">Tech Fun</a>
+              <a class="dropdown-item" href="NoobCoders/TechFun.html">Tech Fun</a>
               <div class="dropdown-divider"></div>
               <a class="dropdown-item" href="#">Write us</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/contact.html">Contact us</a>
+            <a class="nav-link" href="NoobCoders/contact.html">Contact us</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
