--- a/CSETechFields.html
+++ b/CSETechFields.html
@@ -36,7 +36,7 @@
           >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/about.html">About</a>
+          <a class="nav-link" href="NoobCoders/about.html">About</a>
         </li>
         <li class="nav-item dropdown">
           <a
@@ -60,7 +60,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact.html">Contact us</a>
+          <a class="nav-link" href="NoobCoders/contact.html">Contact us</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
