--- a/Programming.html
+++ b/Programming.html
@@ -34,7 +34,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="NoobCoders/about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -58,7 +58,7 @@
               </div>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact us</a>
+              <a class="nav-link" href="NoobCoders/contact.html">Contact us</a>
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
