--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="NoobCoders/contact.html">Contact us</a>
+            <a class="nav-link" href="https://gaurvinegi.github.io/NoobCoders/contact.html">Contact us</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
