--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="NoobCoders/about.html">About</a>
+            <a class="nav-link" href="/NoobCoders/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -57,10 +57,10 @@
               Topics
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="NoobCoders/Programming.html">Programming</a>
-              <a class="dropdown-item" href="NoobCodersCSETechFields.html">CSE Tech Fields</a>
-              <a class="dropdown-item" href="NoobCoders/TechTrends.html">Tech Trends in CS</a>
-              <a class="dropdown-item" href="NoobCoders/TechFun.html">Tech Fun</a>
+              <a class="dropdown-item" href="/NoobCoders/Programming.html">Programming</a>
+              <a class="dropdown-item" href="/NoobCodersCSETechFields.html">CSE Tech Fields</a>
+              <a class="dropdown-item" href="/NoobCoders/TechTrends.html">Tech Trends in CS</a>
+              <a class="dropdown-item" href="/NoobCoders/TechFun.html">Tech Fun</a>
               <div class="dropdown-divider"></div>
               
             </div>
