--- a/TechTrends.html
+++ b/TechTrends.html
@@ -35,14 +35,14 @@
       </button>
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+      <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
             <a class="nav-link" href="/"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="NoobCoders/about.html">About</a>
+            <a class="nav-link" href="/NoobCoders/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a
@@ -57,20 +57,16 @@
               Topics
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="NoobCoders/Programming.html">Programming</a>
-              <a class="dropdown-item" href="NoobCoders/CSETechFields.html"
-                >CSE Tech Fields</a
-              >
-              <a class="dropdown-item" href="NoobCoders/TechTrends.html"
-                >Tech Trends in CS</a
-              >
-              <a class="dropdown-item" href="NoobCoders/TechFun.html">Tech Fun</a>
+              <a class="dropdown-item" href="/NoobCoders/Programming.html">Programming</a>
+              <a class="dropdown-item" href="/NoobCodersCSETechFields.html">CSE Tech Fields</a>
+              <a class="dropdown-item" href="/NoobCoders/TechTrends.html">Tech Trends in CS</a>
+              <a class="dropdown-item" href="/NoobCoders/TechFun.html">Tech Fun</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Write us</a>
+              
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="NoobCoders/contact.html">Contact us</a>
+            <a class="nav-link" href="/NoobCoders/contact.html">Contact us</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
