--- a/contact.html
+++ b/contact.html
@@ -38,41 +38,39 @@
   
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-              <a class="nav-link" href="/"
-                >Home <span class="sr-only">(current)</span></a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="NoobCoders/about.html">About</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-toggle="dropdown"
-                aria-haspopup="true"
-                aria-expanded="false"
-              >
-                Topics
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="NoobCoders/Programming.html">Programming</a>
-                <a class="dropdown-item" href="NoobCoders/CSETechFields.html"
-                  >CSE Tech Fields</a
-                >
-                <a class="dropdown-item" href="NoobCoders/TechTrends.html"
-                  >Tech Trends in CS</a
-                >
-                <a class="dropdown-item" href="NoobCoders/TechFun.html">Tech Fun</a>
-                </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" href="NoobCoders/contact.html">Contact us</a>
-            </li>
-          </ul>
+          <li class="nav-item active">
+            <a class="nav-link" href="/"
+              >Home <span class="sr-only">(current)</span></a
+            >
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/NoobCoders/about.html">About</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              Topics
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="/NoobCoders/Programming.html">Programming</a>
+              <a class="dropdown-item" href="/NoobCodersCSETechFields.html">CSE Tech Fields</a>
+              <a class="dropdown-item" href="/NoobCoders/TechTrends.html">Tech Trends in CS</a>
+              <a class="dropdown-item" href="/NoobCoders/TechFun.html">Tech Fun</a>
+              <div class="dropdown-divider"></div>
+              
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/NoobCoders/contact.html">Contact us</a>
+          </li>
+        </ul>
           <form class="form-inline my-2 my-lg-0">
             <input
               class="form-control mr-sm-2"
