--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="/"
+            <a class="nav-link" href="/NoobCoders/index.html"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
@@ -68,7 +68,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/NoobCoders/contact.html">Contact us</a>
+            <a class="nav-link active" href="/NoobCoders/contact.html">Contact us</a>
           </li>
         </ul>
           <form class="form-inline my-2 my-lg-0">
