--- a/index.html
+++ b/index.html
@@ -190,9 +190,9 @@
             <h5>Welcome to NoobCoders</h5>
             <p>
               <p>Experience is the name everyone gives to their mistakes.</p>
-              <a  class="btn btn-primary" href="/Programming.html">programming</a>
-              <a  class="btn btn-danger" href="/CSETechFields.html">cse tech jobs</a>
-              <a class="btn btn-success" href="/TechFun.html">tech fun</a></p>
+              <a  class="btn btn-primary" href="/NoobCoders/Programming.html">programming</a>
+              <a  class="btn btn-danger" href="/NoobCoders/CSETechFields.html">cse tech jobs</a>
+              <a class="btn btn-success" href="/NoobCoders/TechFun.html">tech fun</a></p>
           </div>
         </div>
         <div class="carousel-item">
@@ -201,9 +201,9 @@
             <h5>Welcome to NoobCoders</h5>
             <p>
               <p>Experience is the name everyone gives to their mistakes.</p>
-              <a  class="btn btn-primary" href="/Programming.html">programming</a>
-              <a  class="btn btn-danger" href="/CSETechFields.html">cse tech jobs</a>
-              <a class="btn btn-success" href="/TechFun.html">tech fun</a></p>
+              <a  class="btn btn-primary" href="/NoobCoders/Programming.html">programming</a>
+              <a  class="btn btn-danger" href="/NoobCoders/CSETechFields.html">cse tech jobs</a>
+              <a class="btn btn-success" href="/NoobCoders/TechFun.html">tech fun</a></p>
           </div>
         </div>
       </div>
@@ -234,7 +234,7 @@
               <div class="mb-1 text-muted">Nov 12</div>
               <p class="card-text mb-auto">
               Programming is the process of giving machines a set of instructions that describe how a program should be carried out.</p>
-              <a href="/Programming.html">Continue reading</a>
+              <a href="/NoobCoders/Programming.html">Continue reading</a>
             </div>
             <img class="card-img-right flex-auto d-none d-md-block img-fluid" data-src="holder.js/200x250?theme=thumb" alt="Thumbnail [200x250]" style="width: 200px; height: 250px;" src="seven.jfif" data-holder-rendered="true">
           </div>
@@ -248,7 +248,7 @@
               </h3>
               <div class="mb-1 text-muted">Nov 11</div>
               <p class="card-text mb-auto">The field of computer science is diverse, with many career options open ... The job requires good collaboration between technical expertise and creativity.</p>
-              <a href="/CSETechFields.html">Continue reading</a>
+              <a href="/NoobCoders/CSETechFields.html">Continue reading</a>
             </div>
             <img class="card-img-right flex-auto d-none d-md-block img-fluid" data-src="holder.js/200x250?theme=thumb" alt="Thumbnail [200x250]" src="six.jfif" data-holder-rendered="true" style="width: 200px; height: 250px;">
           </div>
@@ -267,7 +267,7 @@
           </h3>
           <div class="mb-1 text-muted">Nov 12</div>
           <p class="card-text mb-auto">The field of computer science is the most developing and booming sector.Since the fast few decades the Technology has become 10 times advance</p>
-          <a href="TechTrends.html">Continue reading</a>
+          <a href="/NoobCoders/TechTrends.html">Continue reading</a>
         </div>
         <img class="card-img-right flex-auto d-none d-md-block img-fluid"  alt="Thumbnail [200x250]" style="width: 200px; height: 250px;" src="nine.jfif" data-holder-rendered="true">
       </div>
@@ -281,7 +281,7 @@
           </h3>
           <div class="mb-1 text-muted">Nov 11</div>
           <p class="card-text mb-auto">Fun Facts about technology are always interesting. </p>
-          <a href="TechFun.html">Continue reading</a>
+          <a href="/NoobCoders/TechFun.html">Continue reading</a>
         </div>
         <img class="card-img-right flex-auto d-none d-md-block img-fluid"  alt="Thumbnail [200x250]" src="ten.jfif" data-holder-rendered="true" style="width: 200px; height: 250px;">
       </div>
