--- a/Programming.html
+++ b/Programming.html
@@ -29,7 +29,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
          <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="/NoobCoders/inner.html"
+            <a class="nav-link" href="/NoobCoders/index.html"
               >Home <span class="sr-only">(current)</span></a
             >
           </li>
@@ -50,7 +50,7 @@
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="/NoobCoders/Programming.html">Programming</a>
-              <a class="dropdown-item" href="/NoobCodersCSETechFields.html">CSE Tech Fields</a>
+              <a class="dropdown-item" href="/NoobCoders/CSETechFields.html">CSE Tech Fields</a>
               <a class="dropdown-item" href="/NoobCoders/TechTrends.html">Tech Trends in CS</a>
               <a class="dropdown-item" href="/NoobCoders/TechFun.html">Tech Fun</a>
               <div class="dropdown-divider"></div>
