--- a/TechFun.html
+++ b/TechFun.html
@@ -51,10 +51,10 @@
               Topics
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/NoobCoders/Programming.html">Programming</a>
-              <a class="dropdown-item" href="/NoobCodersCSETechFields.html">CSE Tech Fields</a>
-              <a class="dropdown-item" href="/NoobCoders/TechTrends.html">Tech Trends in CS</a>
-              <a class="dropdown-item" href="/NoobCoders/TechFun.html">Tech Fun</a>
+              <a class="dropdown-item" href="/NoobCoders/Programming.html" target="_blank">Programming</a>
+              <a class="dropdown-item" href="/NoobCodersCSETechFields.html" target="_blank">CSE Tech Fields</a>
+              <a class="dropdown-item" href="/NoobCoders/TechTrends.html" target="_blank">Tech Trends in CS</a>
+              <a class="dropdown-item" href="/NoobCoders/TechFun.html" target="_blank">Tech Fun</a>
               <div class="dropdown-divider"></div>
               
             </div>
