--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
             <h5>Welcome to NoobCoders</h5>
             <p>
               <p>Experience is the name everyone gives to their mistakes.</p>
-             <a  class="btn btn-primary" href="/Programming.html">programming</a>
-              <a  class="btn btn-danger" href="/CSETechFields.html">cse tech jobs</a>
-              <a class="btn btn-success" href="/TechFun.html">tech fun</a></p>
+             <a  class="btn btn-primary" href="/NoobCoders/Programming.html">programming</a>
+              <a  class="btn btn-danger" href="/NoobCoders/CSETechFields.html">cse tech jobs</a>
+              <a class="btn btn-success" href="/NoobCoders/TechFun.html">tech fun</a></p>
           </div>
         </div>
         <div class="carousel-item">
